--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~node_modules/@swimlane/ngx-datatable/index.css';
+@import '~node_modules/@swimlane/ngx-datatable/themes/material.css';
+@import '~node_modules/@swimlane/ngx-datatable/assets/icons.css';
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
